--- a/css/estilo.css
+++ b/css/estilo.css
@@ -75,3 +75,11 @@ body, html{
         line-height: 1.0;
     }
 }
+
+/* Definindo margin para os elementos col no responsivo */
+
+@media screen and (max-width: 991px) {
+    .col-responsivo{
+        margin-top: 15px;
+    }
+}
