--- a/css/estilo.css
+++ b/css/estilo.css
@@ -53,6 +53,31 @@ body, html{
     filter: alpha(opacity=80); /* IE8 */
 }
 
+.ul-margin {
+    margin-top: -1px;
+}
+
+.nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active {
+    color: #17a0b5;
+    background-color: #5c6670;
+    border: none;
+}
+
+.nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active:hover {
+    cursor: not-allowed;
+}
+
+.nav-tabs .nav-link {
+    border: none;
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
+    color: #17a2b8;
+}
+
+.nav-tabs .nav-link:hover {
+    color: #0f6674;
+}
+
 /* Alterando espaçamentos da box conteúdo no responsivo */
 @media screen and (max-width: 550px) {
     .conteudo-titulo span.titulo {
